<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <item android:id="@+id/action_settings" android:title="Settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_sugerencia" android:title="@string/enviar_sugerencia"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_perfil" android:title="@string/mi_perfil"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_estadisticas" android:title="@string/estadisticas_servicios"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>