<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">






        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_servicio"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="#000"/>


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"

            android:hint="@string/ejemplo_servicios"
            android:visibility="invisible" />


        <EditText
            android:id="@+id/phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/precio_mes"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/bfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_below="@+id/spn_moneda"
            android:text="@string/selecciona_fecha" />

        <Button
            android:id="@+id/bhora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bfecha"
            android:layout_marginTop="46dp"
            android:text="Hora"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/efecha1"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bfecha"
            android:layout_toEndOf="@+id/bfecha"
            android:layout_toRightOf="@+id/bfecha"
            android:inputType="date"
            tools:ignore="NewApi" />

        <EditText
            android:id="@+id/ehora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bhora"
            android:layout_alignEnd="@+id/efecha1"
            android:layout_alignRight="@+id/efecha1"
            android:layout_toRightOf="@+id/bhora"
            android:visibility="invisible" />

        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_above="@+id/ehora"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/añadir_suscripcion" />

        <Button
            android:id="@+id/DisplayButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/submit"
            android:text="@string/mostrar_servicios" />

        <Button
            android:id="@+id/btn_remove1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DisplayButton"
            android:text="@string/eliminar_servicio" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/phone_number"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/ejemplo_servicios" />

        <EditText
            android:id="@+id/edt_personalizado"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:hint="Nombre del servicio personalizado"
            android:inputType="number"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edt_personalizado"
            android:layout_centerHorizontal="true"
            android:text="TextView"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/spn_moneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/phone_number"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView2"
            android:text="TextView"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView3"
            android:text="TextView"
            android:visibility="invisible" />


</RelativeLayout>
